# knowsql

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
scripts/: generate_dummy_db.py
src/knowsql/: __init__.py  cli.py  config.py
src/knowsql/agent/: agent.py  navigator.py  sql_generator.py  table_selector.py
src/knowsql/indexer/: domain_clusterer.py  index_generator.py  introspector.py  keyword_conflict_detector.py  models.py  pipeline.py  relationship_detector.py  sampler.py
src/knowsql/llm/: __init__.py  anthropic_provider.py  errors.py  openai_provider.py  provider.py
src/knowsql/utils/: display.py
tests/: conftest.py  test_agent.py  test_anthropic_provider.py  test_config.py  test_display.py  test_domain_clusterer.py  test_errors.py  test_index_generator.py  test_introspector.py  test_keyword_conflict_detector.py  test_llm_provider.py  test_navigator.py  test_openai_provider.py  test_pipeline.py  test_relationship_detector.py  test_sampler.py  test_sql_generator.py
