[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowsql"
version = "0.1.0"
description = "CLI tool that solves the 'which tables should I query?' problem for any SQL database"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
knowsql = "knowsql.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/knowsql"]
